--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,6 @@ yarn-debug.log*
 
 config/database.yml
 /public/uploads
+/config/secrets.yml
+# Ignore application configuration
+/config/application.yml
